# install

./: .gitignore  README.md  config.py  install.py  packages.yaml  swap.py
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  故障排除.md  配置管理.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  Python API.md  Qt6组件API.md
.qoder/repowiki/zh/content/图形界面应用/: Qt6应用程序架构.md  UI组件设计.md  图形界面应用.md  构建配置.md
.qoder/repowiki/zh/content/核心功能/: 核心功能.md  用户界面功能.md  系统管理功能.md  软件包管理系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
gui/: CMakeLists.txt  PackageInfoWidget.h  SelectionWidget.h  main.cpp
